Bug 1089534 - [B2G][Telephony] should GetCallFromEverywhere in Telephony::NotifyError. r=aknow